Update index.html add script

--- a/Client/index.html
+++ b/Client/index.html
@@ -1,9 +1,26 @@
 <!doctype html>
 <html lang="en">
   <head>
-
+    <script>
+  window.dataLayer = window.dataLayer || [];
+</script>
+<script>
+  window.dataLayer.push({
+    'productId': '',
+    'productClass': '',
+    'Productsdetails': [{
+      'name': 'Lenovo IdeaPad',
+      'size': 15.6,
+      'price': 19.99,
+      'colour':'Grey',
+      'bydefauld':'',
+    }]
+  });
+</script>
+    
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TXET0944YG"></script>
+    
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
