--- a/Client/index.html
+++ b/Client/index.html
@@ -16,7 +16,21 @@
     }]
   });
 </script>
-    
+    <script>
+  window.dataLayer.push({
+    'productId': '',
+    'productClass': '',
+    'Pagedetails': [{
+      'Page Detail': {
+       'Page Category': 'Information Page',
+       'Country':'India',
+       'Currency': 'INR',
+       'User Type':'External',
+       'URL':'https://www.infosysbpm.com/contact/apac-bpm.html#india',
+   
+    }]
+  });
+</script>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TXET0944YG"></script>
     
